removing duplicate and old files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-    "name": "react-app",
+    "homepage": "https://rotemYehiel.github.io/playlist",
+    "name": "playlist",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -16,6 +17,8 @@
     },
     "scripts": {
         "start": "react-scripts start",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "build": "react-scripts build",
         "test": "jest",
         "test:watch": "jest --watch",
