--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "private": true,
     "dependencies": {
         "@testing-library/user-event": "^13.5.0",
+        "@types/node": "^20.11.16",
+        "@types/react": "^18.2.52",
+        "@types/react-dom": "^18.2.18",
         "axios": "^1.6.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -13,6 +16,7 @@
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
         "styled-components": "^6.1.8",
+        "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -43,9 +47,12 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
+        "@types/jest": "^29.5.12",
         "gh-pages": "^6.1.1",
-        "jest": "^29.7.0"
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.2"
     }
 }
